--- a/DietTrackerBlazorServer/Shared/LoginDisplay.razor
+++ b/DietTrackerBlazorServer/Shared/LoginDisplay.razor
@@ -1,12 +1,15 @@
-﻿<AuthorizeView>
+﻿
+
+<AuthorizeView>
     <Authorized>
-        <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
+        <MudLink Color="Color.Inherit" Href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</MudLink>
         <form method="post" action="Identity/Account/LogOut">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
+            <MudButton Color="Color.Inherit" ButtonType="ButtonType.Submit">Log out</MudButton>
         </form>
     </Authorized>
     <NotAuthorized>
-        <a href="Identity/Account/Register">Register</a>
-        <a href="Identity/Account/Login">Log in</a>
+        <MudLink Color="Color.Inherit" Href="Identity/Account/Register">Register</MudLink>
+        <MudLink Color="Color.Inherit" Href="Identity/Account/Login">Log in</MudLink>
     </NotAuthorized>
 </AuthorizeView>
+
