--- a/DietTrackerBlazorServer/Shared/LoginDisplay.razor
+++ b/DietTrackerBlazorServer/Shared/LoginDisplay.razor
@@ -8,7 +8,7 @@
         </form>
     </Authorized>
     <NotAuthorized>
-        <MudLink Color="Color.Inherit" Href="Identity/Account/Register">Register</MudLink>
+        <MudLink Class="me-3" Color="Color.Inherit" Href="Identity/Account/Register">Register</MudLink>
         <MudLink Color="Color.Inherit" Href="Identity/Account/Login">Log in</MudLink>
     </NotAuthorized>
 </AuthorizeView>
