--- a/DietTrackerBlazorServer/Shared/MainLayout.razor
+++ b/DietTrackerBlazorServer/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
 
 <MudLayout>
 
-    <MudAppBar Elevation="20" Dense>
+    <MudAppBar Dense>
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         Health Tracker
         <MudSpacer />
