--- a/DietTrackerBlazorServer/Components/DTDialog.razor
+++ b/DietTrackerBlazorServer/Components/DTDialog.razor
@@ -1,7 +1,7 @@
 ﻿@typeparam TItem
 
 
-<MudDialog @bind-IsVisible="_Visible ">
+<MudDialog @bind-IsVisible="_Visible" ClassContent="@($"border-t-2 {GetBorderColour()}")">
     <TitleContent>
         @_Title
     </TitleContent>
