--- a/DietTrackerBlazorServer/Shared/MainLayout.razor
+++ b/DietTrackerBlazorServer/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 @inherits DTComponentBase
 
 
-<MudThemeProvider />
+<MudThemeProvider Theme="@(new MudTheme(){})" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
