--- a/DietTrackerBlazorServer/Pages/HealthMetrics.razor
+++ b/DietTrackerBlazorServer/Pages/HealthMetrics.razor
@@ -2,12 +2,20 @@
 @using DietTrackerBlazorServer.Components
 @inherits DTComponentBase
 
-<MudDataGrid Items="@_HealthMetrics"
-             ReadOnly="false"
-             EditMode="DataGridEditMode.Form"
+<MudDataGrid @ref="_Grid"
+             T=@HealthMetric
+             Items=@_HealthMetrics
+             SelectedItem=@_SelectedItem
+             SelectedItemChanged=@SelectedItemChanged
+             ReadOnly="true"
+             SelectOnRowClick=true
              Dense="true"
-             Elevation="10">
+             MultiSelection="false"
+             Elevation="10"
+             RowClassFunc="@GetRowClass">
+    
     <Columns>
+        <SelectColumn ShowInFooter=false ShowInHeader=false Size="Size.Small" />
         <PropertyColumn Property="x => x.Name" />
         <PropertyColumn Property="x => x.Description" />
         <TemplateColumn Title="Color">
@@ -23,6 +31,7 @@
     </Columns>
     <NoRecordsContent>
         You do not have any health metrics yet.
+        You can add one by clicking the add button below.
     </NoRecordsContent>
     <PagerContent>
         @if (_HealthMetrics.Count >= 10)
@@ -30,35 +39,54 @@
             <MudDataGridPager DisableRowsPerPage="true" />
         }
     </PagerContent>
-    <ToolBarContent>
-        <MudToolBar Dense>
-            <MudIconButton Icon="@Icons.Material.Outlined.Add" Color="Color.Success" />
-            <MudIconButton Icon="@Icons.Material.Outlined.Edit" Color="Color.Info" />
-            <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" />
-        </MudToolBar>
-    </ToolBarContent>
 </MudDataGrid>
 
-<MudDivider Vertical />
+<MudToolBar Dense>
+    <MudIconButton Icon="@Icons.Material.Outlined.Add"
+                   Variant="Variant.Outlined"
+                   Color="Color.Success"
+                   OnClick="@(async () => await _Dialog.Show(new HealthMetric()))" />
+    <MudIconButton Icon="@Icons.Material.Outlined.Edit"
+                   Variant="Variant.Outlined"
+                   Disabled="@(_SelectedItem == null)"
+                   Color="Color.Info"
+                   OnClick="@(async () => await _Dialog.Show(_SelectedItem, DialogMode.Edit))" />
+    <MudIconButton Icon="@Icons.Material.Outlined.Delete"
+                   Variant="Variant.Outlined"
+                   Disabled="@(_SelectedItem == null)"
+                   Color="Color.Error"
+                   OnClick="@(async () => await _Dialog.Show(_SelectedItem, DialogMode.Delete))" />
+</MudToolBar>
 
- <MudButton Color="Color.Primary" OnClick="@(async () => await _AddDialog.Show(new HealthMetric()))">
-     Show add dialog
- </MudButton>
- <MudButton Color="Color.Secondary" OnClick="@(async () => await _AddDialog.Show(new HealthMetric(), DialogMode.Edit))">
-     Show edit dialog
- </MudButton>
- <MudButton Color="Color.Tertiary" OnClick="@(async () => await _AddDialog.Show(new HealthMetric(), DialogMode.Delete))">
-     Show delete dialog
- </MudButton>
+@* <MudButton Color="Color.Success" OnClick="@(async () => await _AddDialog.Show(new HealthMetric()))">
+    Show add dialog
+</MudButton>
+<MudButton Color="Color.Warning" OnClick="@(async () => await _AddDialog.Show(new HealthMetric(), DialogMode.Edit))">
+    Show edit dialog
+</MudButton>
+<MudButton Color="Color.Error" OnClick="@(async () => await _AddDialog.Show(new HealthMetric(), DialogMode.Delete))">
+    Show delete dialog
+</MudButton> *@
 
 
- <DTDialog @ref="_AddDialog" TItem="HealthMetric">
-     <ItemFields>
-         <MudTextField @bind-Value="context.Item.Name" Disabled="@context.Disabled" Placeholder="Name"></MudTextField>
-         <MudTextField @bind-Value="context.Item.Description" Disabled="@context.Disabled" Placeholder="Description"></MudTextField>
-         <MudColorPicker @bind-Text="context.Item.Color" Disabled="@context.Disabled"></MudColorPicker>
-     </ItemFields>
- </DTDialog>
+<DTDialog @ref="_Dialog" TItem="HealthMetric">
+    <ItemFields>
+        <MudTextField @bind-Value="context.Item.Name"
+                      Label="Name"
+                      Disabled="@context.Disabled"
+                      Variant="Variant.Filled"
+                      Placeholder="Name" />
+        <MudTextField @bind-Value="context.Item.Description"
+                      Label="Description"
+                      Disabled="@context.Disabled"
+                      Variant="Variant.Filled"
+                      Placeholder="Description" />
+        <MudColorPicker @bind-Text="context.Item.Color"
+                        Label="Colour"
+                        Variant="Variant.Filled"
+                        Disabled="@context.Disabled" />
+    </ItemFields>
+</DTDialog>
 
  @* @if (_CurrentHealthMetrics.Count > 0)
 {
