--- a/DietTrackerBlazorServer/Pages/HealthMetrics.razor
+++ b/DietTrackerBlazorServer/Pages/HealthMetrics.razor
@@ -35,12 +35,12 @@
                     <MudIconButton Icon="@Icons.Material.Filled.Edit"
                                    Variant="Variant.Filled"
                                    Color="Color.Info"
-                                   OnClick="@(async () => await _Dialog.ShowAsync(context.Item, DialogMode.Edit))" />
+                                   OnClick="@(async () => await OnItemEdit(context.Item))" />
 
                     <MudIconButton Icon="@Icons.Material.Filled.Delete"
                                    Variant="Variant.Filled"
                                    Color="Color.Error"
-                                   OnClick="@(async () => await _Dialog.ShowAsync(context.Item, DialogMode.Delete))" />
+                                   OnClick="@(async () => await OnItemDelete(context.Item))" />
                 </div>
             </CellTemplate>
         </TemplateColumn>
@@ -61,7 +61,7 @@
     <MudButton Variant="Variant.Filled"
                Color="Color.Success"
                Class="mt-4"
-               OnClick="@(async () => await _Dialog.ShowAsync(new HealthMetric()))">
+               OnClick="@OnItemAdd">
 
         <MudIcon Icon="@Icons.Material.Outlined.Add" />
         Add new health metric
