--- a/DietTrackerBlazorServer/Shared/MainLayout.razor
+++ b/DietTrackerBlazorServer/Shared/MainLayout.razor
@@ -22,9 +22,15 @@
             <MudNavMenu>
                 <MudNavLink Href="/">Dashboard</MudNavLink>
                 <MudNavLink Href="/HealthMetrics">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <MudIcon Icon="@Icons.Material.Filled.List" />
-                        Edit metrics
+                    <div class="d-flex align-items-center justify-content-between gap-4">
+                        <MudIcon Icon="@Icons.Material.Filled.DataObject" Size="Size.Small" />
+                        Edit Metrics
+                    </div>
+                </MudNavLink>
+                <MudNavLink Href="/FoodTypes">
+                    <div class="d-flex align-items-center justify-content-between gap-4">
+                        <MudIcon Icon="@Icons.Material.Filled.Fastfood" Size="Size.Small" />
+                        Edit Food Types
                     </div>
                 </MudNavLink>
                 <MudNavLink Href="/Stats">Stats</MudNavLink>
